--- a/angular.json
+++ b/angular.json
@@ -61,6 +61,34 @@
                   "maximumError": "10kb"
                 }
               ]
+            },
+            "dev": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.dev.ts"
+                }
+              ],
+              "optimization": false,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": false,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
             }
           }
         },
@@ -72,6 +100,9 @@
           "configurations": {
             "production": {
               "browserTarget": "my-blog:build:production"
+            },
+            "dev": {
+              "browserTarget": "my-blog:build:dev"
             }
           }
         },
@@ -121,6 +152,9 @@
           "configurations": {
             "production": {
               "devServerTarget": "my-blog:serve:production"
+            },
+            "dev": {
+              "devServerTarget": "my-blog:serve:dev"
             }
           }
         }
