--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~11.0.2",
     "@angular/platform-browser-dynamic": "~11.0.2",
     "@angular/router": "~11.0.2",
+    "eslint-plugin-prettier": "^3.1.4",
     "rxjs": "~6.5.5",
     "ts-md5": "^1.2.7",
     "tslib": "^2.0.0",
